Kubernetes/kustomize/base/media/arr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonarr
        network-policy: arr
    spec:
      # https://www.ibm.com/docs/de/spectrum-conductor/2.5.0?topic=instances-network-provisioning-docker-pods
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
          ports: 
            - containerPort: 8989
          volumeMounts:
            - name: media-local-storage
              mountPath: /media/tv
              subPath: tv
            - name: media-local-storage
              mountPath: /media/downloads
              subPath: downloads
            - name: media-config-longhorn-storage
              mountPath: /config
              subPath: sonarr
      
      serviceAccount: sonarr
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.0.0.6
      volumes:
        - name: media-config-longhorn-storage
          persistentVolumeClaim:
            claimName: media-config-longhorn-storage-claim
        - name: media-local-storage
          persistentVolumeClaim:
            claimName: media-local-storage-claim
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: http-sonarr
      port: 9898
      targetPort: 8989
  selector:
    app: sonarr

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: radarr
        network-policy: arr
    spec:
      # https://www.ibm.com/docs/de/spectrum-conductor/2.5.0?topic=instances-network-provisioning-docker-pods
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          resources:
            limits: 
              memory: 512M
          ports:
            - containerPort: 7878
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: media-local-storage
              mountPath: /media/movies
              subPath: movies
            - name: media-local-storage
              mountPath: /media/downloads
              subPath: downloads
            - name: media-config-longhorn-storage
              mountPath: /config
              subPath: radarr
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.0.0.6
      serviceAccount: radarr
      volumes:
        - name: media-config-longhorn-storage
          persistentVolumeClaim:
            claimName: media-config-longhorn-storage-claim
        - name: media-local-storage
          persistentVolumeClaim:
            claimName: media-local-storage-claim
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: http-radarr
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
