Kubernetes/kustomize/base/media/book-viewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kavita
  name: kavita
spec:
  selector:
    matchLabels:
      app: kavita
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kavita
    spec:
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: kavita
          image: lscr.io/linuxserver/kavita:latest
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits: 
              memory: 1024M # 1GB Memory
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: media-config-local-storage
              mountPath: /config
              subPath: kavita
            - name: media-local-storage
              mountPath: /media/books
              subPath: books
      volumes:
        - name: media-config-local-storage
          persistentVolumeClaim:
            claimName: media-config-local-storage-claim
        - name: media-local-storage
          persistentVolumeClaim:
            claimName: media-local-storage-claim
      restartPolicy: Always
      serviceAccount: kavita

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kavita
  name: kavita
spec:
  ports:
    - name: http-book-ui
      port: 8083
      targetPort: 5000
  selector:
    app: kavita
