Kubernetes/kustomize/base/media/it-tools.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ittool
  name: ittool
spec:
  selector:
    matchLabels:
      app: ittool
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ittool
    spec:
      containers: 
        - name: ittool
          image: corentinth/it-tools:latest
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits: 
              memory: 512M # 1GB Memory
          ports:
            - containerPort: 80
      restartPolicy: Always
      serviceAccount: kavita

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ittool
  name: ittool
spec:
  ports:
    - name: http-ittool
      port: 80
      targetPort: 80
  selector:
    app: ittool
