Kubernetes/kustomize/base/media/media-viewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits: 
              memory: 1024M # 1GB Memory
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media-config-local-storage
              mountPath: /config
              subPath: jellyfin
            - name: media-local-storage
              mountPath: /media/tv
              subPath: tv
            - name: media-local-storage
              mountPath: /media/movie
              subPath: movies
          # healthcheck: # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/        
      volumes:
        - name: media-config-local-storage
          persistentVolumeClaim:
            claimName: media-config-local-storage-claim
        - name: media-local-storage
          persistentVolumeClaim:
            claimName: media-local-storage-claim
      restartPolicy: Always
      serviceAccount: jellyfin

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
    - name: http-web-ui
      port: 7026
      protocol: TCP
      targetPort: 8096
  selector:
    app: jellyfin
