Kubernetes/kustomize/base/media/media-vpn.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediavpn
  name: mediavpn
spec:
  selector:
    matchLabels:
      app: mediavpn
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mediavpn
        istio.io/dataplane-mode: none
    spec:
      # https://www.ibm.com/docs/de/spectrum-conductor/2.5.0?topic=instances-network-provisioning-docker-pods
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      
      # Sidecar container because of restart policy
      containers:   
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: Always
          resources:
            limits: 
              memory: 512M
          ports:
            - containerPort: 9117
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: media-config-local-storage
              mountPath: /config
              subPath: jackett
        
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          resources:
            limits: 
              memory: 512M
          ports:
            - containerPort: 9078
            - containerPort: 6881
              hostPort: 6881
              hostIP: 0.0.0.0
              protocol: TCP
            - containerPort: 6881
              hostIP: 0.0.0.0
              hostPort: 6881
              protocol: UDP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: media-config-local-storage
              mountPath: /config
              subPath: qbittorent
            - name: media-local-storage
              mountPath: /media/downloads
              subPath: downloads
      
      volumes:
        - name: media-config-local-storage
          persistentVolumeClaim:
            claimName: media-config-local-storage-claim
        - name: media-local-storage
          persistentVolumeClaim:
            claimName: media-local-storage-claim
      restartPolicy: Always
      serviceAccount: mediavpn
      dnsPolicy: ClusterFirstWithHostNet

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediavpn
  name: mediavpn
spec:
  ports:
    - name: http-jackett
      port: 9845
      targetPort: 9117
  selector:
    app: mediavpn

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbit
  name: qbit
spec:
  ports:
    - name: http-qbit-web-ui
      port: 9078
      targetPort: 9078
  selector:
    app: mediavpn
