Kubernetes/kustomize/base/media/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: media-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
      hosts:
        - "media/jellyfin.homelab.ezequielvalencia.com"
        - "media/library.homelab.ezequielvalencia.com"
        - "media/sonarr.homelab.ezequielvalencia.com"
        - "media/radarr.homelab.ezequielvalencia.com"
        - "media/jackett.homelab.ezequielvalencia.com"
        - "media/qbit.homelab.ezequielvalencia.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: media-certs # Same name as secret 
      hosts:
        - "media/jellyfin.homelab.ezequielvalencia.com"
        - "media/library.homelab.ezequielvalencia.com"
        - "media/sonarr.homelab.ezequielvalencia.com"
        - "media/radarr.homelab.ezequielvalencia.com"
        - "media/jackett.homelab.ezequielvalencia.com"
        - "media/qbit.homelab.ezequielvalencia.com"
