Kubernetes/kustomize/base/media/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jellyfin-route
spec:
  hosts:
  - jellyfin.homelab.ezequielvalencia.com
  gateways:
  - media-gateway 
  http:
  - route:
    - destination:
        host: jellyfin
        port:
          number: 7026

---
